<resources>
    <!-- default command -->
    <string name="app_name">java-workshop</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="pokemon_game">Pokemon Game</string>
    <string name="startimage">startImage</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="title_screen">Title Screen</string>
    <string name="new_start_text">You find yourself in a small village, the only way out is going back.\n\n
        It look\'s nice, might want to check it out before heading back.
    </string>

    <!-- Basic Command -->
    <string name="goNorth">Go north</string>
    <string name="goEast">Go east</string>
    <string name="goSouth">Go south</string>
    <string name="goWest">Go west</string>
    <string name="goBack">Go back</string>
    <string name="visitLab">Visit the Lab</string>
    <string name="visitLake">Visit the lake</string>
    <string name="knockDoors">Knock on doors</string>
    <string name="readSign">Read sign</string>
    <string name="frolic">Frolic</string>
    <string name="surf">Surf</string>

    <!-- PALLET TOWN -->

    <string name="oaksQuestion">Hello there! Good that you came, I have a question for you, which color do you like
        best?
    </string>
    <string name="palletOaksBookshelfUnvisited">You see a lot of books about Pokemon. One catches your eye and you grab it
        from its place. \'Pokenatomy\', the cover reads. Better put it back.
    </string>
    <string name="palletOaksBookshelfVisited">You\'d rather not open that book again, you saw too much of Chansey already.
    </string>
    <string name="palletSchoolBoy">Hey there! My parents aren\'t home but they work at the Lab, I sometimes visit
        them!
    </string>
    <string name="palletOaksWarning">Don\'t go out! It\'s unsafe! Wild Pokémon live in tall grass! You need your own
        Pokémon for your protection.\n\n Meet me at my lab.
    </string>

    <!-- PALLET ENTRANCE -->

    <string name="outsidePalletPikachu">You look around and see a beautiful forest, what was that old man on about?
        Pikachu\'s frolicking about everywhere! \n\nThere\'s a sign in front of you
    </string>
    <string name="palletLakeNoSurf">You can see an island in the distance.\n\nToo bad you don\'t have any big water
        Pokemon.
    </string>
    <string name="startButtonDescription">startButton</string>


</resources>