<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameScreen">


    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical" android:background="#FAB653" android:gravity="center_horizontal"
            android:id="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <ImageView
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/pallettown"
                android:id="@+id/gameImage" android:layout_weight="3"
                android:layout_height="0dp" android:layout_marginTop="0dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/startimage"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp" android:id="@+id/gameText" android:layout_weight="2"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
                android:textSize="18sp" android:gravity="center_horizontal|center_vertical"
                android:background="#80FBF4F4"/>
        <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" android:layout_marginBottom="10dp">
            <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/default_button"
                    style="@style/DefaultButton"
                    android:text="@string/button_1" android:layout_marginStart="20dp" android:layout_weight="1"
                    android:onClick="selectedButton1"/>
            <!--link button 1 to button 1 in GameScreen.java-->
            <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/default_button"
                    style="@style/DefaultButton"
                    android:text="@string/button_2" android:layout_marginStart="20dp" android:layout_weight="1"
                    android:onClick="selectedButton2"/>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">
            <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/default_button"
                    style="@style/DefaultButton"
                    android:text="@string/button_3" android:layout_marginStart="20dp" android:layout_weight="1"
                    android:onClick="selectedButton3"/>
            <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/default_button"
                    style="@style/DefaultButton"
                    android:text="@string/button_4" android:layout_marginStart="20dp" android:layout_weight="1"
                    android:onClick="selectedButton4"/>
        </TableRow>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>